2012-03-30 Dario Rodriguez <dario.rodriguez@artica.es>

	*include/functions_menu.php,
	include/styles/menu.css,
	include/functions_visual_map.php,
	include/functions_reports.php,
	operation/visual_console/render_view.php,
	operation/visual_console/index.php,
	operation/agentes/networkmap.php,
	operation/servers/view_server.php,
	operation/servers/recon_view.php,
	operation/servers/view_server_detail.php,
	operation/menu.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php,
	general/header.php,
	godmode/servers/modificar_server.php,
	godmode/menu.php,
	godmode/reporting/graph_builder.main.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.elements.php,
	godmode/reporting/graph_builder.php,
	godmode/reporting/graph_builder.graph_editor.php,
	godmode/reporting/reporting_builder.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/map_builder.php,
	godmode/reporting/graphs.php: Changing menu structure (Agent Detail, 
	Network Maps and Reporting).

2012-03-29  Hirofumi Kosaka  <kosaka@rworks.jp>

	* mobile/operation/agents/monitor_status.php
	mobile/operation/agents/view_agents.php
	mobile/operation/events/events.php: Fixed reference paths to
	image files for page navigation ('go next' or so).

2012-03-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	include/config_process.php
	include/functions.php
	include/functions_reports.php
	godmode/reporting/reporting_builder.list_items.php
	godmode/reporting/reporting_builder.php
	godmode/reporting/reporting_builder.item_editor.php:  Added the two new
	report item types inventory and inventory_changes merged from trunk

	* include/constants.php: Added constants file merged from trunk

2012-03-28  Sancho Lerena <slerena@artica.es>

	* operation/agentes/estado_agente.php: Fixed several usability problems.