@@ -32,14 +32,18 @@
 </head>
 <body>
 
-<div id="main" style=' width: 80%; margin:0 auto 0 auto;'>
-	<div align='center'>
-		<div id='login_f'>
-			<h1 id="log_f" class="error">Problem with Pandora FMS auth system</h1>
-			<div>
-				<img src="images/pandora_logo.png" border="0">
-			</div>
-			<div class="msg">
+
+
+<img src="images/login_background.png" id="login_body">
+<div class="databox_error" id="login">
+	<br>
+	<h1 id="log">Problem with Pandora FMS database</h1>
+	<br>
+	<div style="width: 440px; margin: 0 auto auto;">
+		<table cellpadding="4" cellspacing="1" width="440">
+		<tr><td align="left">
+			<a href="index.php"><img src="images/pandora_login.png" border="0" height="100px" alt="Pandora FMS"></a>
+		</td><td valign="bottom">
 			Cannot connect to the database, please check your database setup in the <b>include/config.php</b> file or read the documentation on how to setup Pandora FMS.<i><br /><br />
 			Probably one or more of your user, database or hostname values are incorrect or 
 			the database server is not running.</i><br /><br /><span class="error">
@@ -51,8 +55,15 @@
 			<div class="msg">
 			If you have modified auth system, problem could be because Pandora cannot override authorization variables from the config database. Remove them from your database by executing:<br><br><pre>DELETE FROM tconfig WHERE token = "auth";</pre>
 			</div>
-		</div>
+		</td></tr>
+		</table>
 	</div>
+	<br>
+
+</div>
+
+<div id="bottom_logo">
+	<img src='images/bottom_logo.png' "alt" = "logo"  "border" = "0">
 </div>
 
 </body>
