@@ -32,22 +32,31 @@
 </head>
 <body>
 
-<div id="main" style='float:left; margin-left: 100px'>
-	<div align='center'>
-		<div id='login_f'>
-			<h1 id="log_f" class="error">Empty configuration table</h1>
-			<div>
-				<img src="images/pandora_logo.png" border="0">
-			</div>
-			<div class="msg">
+<img src="images/login_background.png" id="login_body">
+<div class="databox_error" id="login">
+	<br>
+	<h1 id="log">Empty configuration table</h1>
+	<br>
+	<div style="width: 440px; margin: 0 auto auto;">
+		<table cellpadding="4" cellspacing="1" width="440">
+		<tr><td align="left">
+			<a href="index.php"><img src= <?php echo '"'.$relative_link . 'images/pandora_login.png"' ?> border="0" height="100px" alt="Pandora FMS"></a>
+		</td><td valign="bottom">
+			<br><br>
 			Cannot load configuration variables from database. Please check your database setup in the
 			<b>include/config.php</b> file or read the documentation on how to setup Pandora FMS.<i><br><br>
 			Most likely your database schema has been created but there are is no data in it, you have a problem with the database access credentials or your schema is out of date.
 			<br><br>Pandora FMS Console cannot find <i>include/config.php</i> or this file has invalid
 			permissions and HTTP server cannot read it. Please read documentation to fix this problem.</i>
-			</div>
-		</div>
+		</td></tr>
+		</table>
 	</div>
+	<br>
+
+</div>
+
+<div id="bottom_logo">
+	<img src='images/bottom_logo.png' "alt" = "logo"  "border" = "0">
 </div>
 
 </body>
