@@ -27,27 +27,40 @@
 <meta name="copyright" content="This is GPL software. Created by Sancho Lerena and others">
 <meta name="keywords" content="pandora, monitoring, system, GPL, software">
 <meta name="robots" content="index, follow">
-<link rel="icon" href="images/pandora.ico" type="image/ico">
-<link rel="stylesheet" href="include/styles/pandora.css" type="text/css">
+<link rel="icon" href= <?php echo '"images/pandora.ico"' ?> type="image/ico">
+<link rel="stylesheet" href= <?php echo '"include/styles/pandora.css"' ?> type="text/css">
 </head>
 <body>
 
-<div id="main" style=' width: 80%; margin:0 auto 0 auto;'>
-	<div align='center'>
-		<div id='login_f'>
-			<h1 id="log_f" class="error">No configuration file found</h1>
-			<div>
-				<img src="images/pandora_logo.png" border="0">
-			</div>
-			<div class="msg">
+
+<img src="images/login_background.png" id="login_body">
+<div class="databox_logout" id="login">
+	<br>
+	<h1 id="log">No configuration file found</h1>
+	<br>
+	<div style="width: 440px; margin: 0 auto auto;">
+		<table cellpadding="4" cellspacing="1" width="440">
+		<tr><td align="left">
+			<a href="index.php"><img src= <?php echo '"images/pandora_login.png"' ?> border="0" height="100px" alt="Pandora FMS"></a>
+		</td><td valign="bottom">
 			<br><br>Pandora FMS Console cannot find <i>include/config.php</i> or this file has invalid
 			permissions and HTTP server cannot read it. Please read documentation to fix this problem.
-			</div>
 			<div class="msg">
-			You may try to run the <b><a href="install.php">installation wizard</a></b> to create one.
+			You may try to run the <b><?php 
+											if (file_exists('install.php'))
+												echo '<a href="install.php">installation wizard</a>';
+											else
+												echo 'installation wizard'; ?></b> to create one.
 			</div>
-		</div>
+		</td></tr>
+		</table>
 	</div>
+	<br>
+
+</div>
+
+<div id="bottom_logo">
+	<img src='images/bottom_logo.png' "alt" = "logo"  "border" = "0">
 </div>
 
 </body>
