@@ -27,26 +27,36 @@
 <meta name="copyright" content="This is GPL software. Created by Sancho Lerena and others">
 <meta name="keywords" content="pandora, monitoring, system, GPL, software">
 <meta name="robots" content="index, follow">
-<link rel="icon" href="images/pandora.ico" type="image/ico">
-<link rel="stylesheet" href="include/styles/pandora.css" type="text/css">
+<link rel="icon" href= <?php echo '"images/pandora.ico"' ?> type="image/ico">
+<link rel="stylesheet" href= <?php echo '"include/styles/pandora.css"' ?> type="text/css">
 </head>
 <body>
 
-<div id="main" style=' width: 80%; margin:0 auto 0 auto;'>
-	<div align='center'>
-		<div id='login_f'>
-			<h1 id="log_f" class="error">Bad permission for include/config.php</h1>
-			<div>
-				<img src="images/pandora_logo.png" border="0" alt="Pandora FMS"><br>
-			</div>
-			<div class="msg"><br><br>
+<img src="images/login_background.png" id="login_body">
+<div class="databox_logout" id="login">
+	<br>
+	<h1 id="log">&nbsp;&nbsp;Bad permission for include/config.php</h1>
+	<br>
+	<div style="width: 440px; margin: 0 auto auto;">
+		<table cellpadding="4" cellspacing="1" width="440">
+		<tr><td align="left">
+			<a href="index.php"><img src= <?php echo '"images/pandora_login.png"' ?> border="0" height="100px" alt="Pandora FMS"></a>
+		</td><td valign="bottom">
+			<br>
 			For security reasons, <i>config.php</i> must have restrictive permissions, and "other" users 
 			should not read it or write to it. It should be written only for owner 
 			(usually www-data or http daemon user), normal operation is not possible until you change 
 			permissions for <i>include/config.php</i> file. Please do it, it's for your security.
-			</div>
-		</div>
+		</td></tr>
+		</table>
 	</div>
+	<br>
+
 </div>
+
+<div id="bottom_logo">
+	<img src='images/bottom_logo.png' "alt" = "logo"  "border" = "0">
+</div>
+
 </body>
 </html>
