@@ -1,3 +1,15 @@
+2012-03-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* images/splash_error.png: Added background image for error views.
+	
+	* include/styles/pandora.css
+	 general/error_emptyconfig.php
+	 general/error_perms.php
+	 general/error_authconfig.php
+	 general/error_noconfig.php
+	 general/error_install.php
+	 general/error_dbconfig.php: Changed views to the new look and feel. 
+
 2012-03-30 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	*include/functions_menu.php,
